# Kodowanie-uniwersalne

./: .gitignore  BitReader.cpp  BitReader.hpp  BitWriter.cpp  BitWriter.hpp  CMakeCache.txt  CMakeLists.txt  Decoding.cpp  Decoding.hpp  Encoding.hpp  FibTest.cpp  GammaDecoding.cpp  GammaEncoding.cpp  GammaEncoding.hpp  LZWDecodingProcess.hpp  LZWEncodingProcess.cpp  LZWEncodingProcess.hpp  Lista3  LzwDecoder.hpp  LzwEncoder.hpp  README.md  deltaTest.cpp  encoder.cpp  experiments.sh  omegaTest.cpp  supportingClasses.h  temp.txt  test.cpp  testEncodingDecoding.cpp  testGamma.cpp  testLzw.cpp  testfile.txt
DecodingClasses/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  decoder  decoder.cpp
DecodingClasses/BitBuffers/: BitReader.cpp
DecodingClasses/Decodings/: Decoding.cpp  Decoding.hpp  DeltaDecoding.cpp  DeltaDecoding.hpp  FibonacciDecoding.cpp  FibonacciDecoding.hpp  GammaDecoding.cpp  GammaDecoding.hpp  OmegaDecoding.cpp  OmegaDecoding.hpp
DecodingClasses/LzwClasses/: LZWDecodingProcess.cpp  LZWDecodingProcess.hpp  LzwDecoder.cpp  LzwDecoder.hpp
EncodingClasses/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  encoder  encoder.cpp
EncodingClasses/BitBuffers/: BitReader.cpp  BitWriter.cpp  BitWriter.hpp
EncodingClasses/Encodings/: DeltaEncoding.cpp  DeltaEncoding.hpp  Encoding.cpp  Encoding.hpp  FibonacciEncoding.cpp  FibonacciEncoding.hpp  GammaEncoding.cpp  GammaEncoding.hpp  OmegaEncoding.cpp  OmegaEncoding.hpp
EncodingClasses/LzwClasses/: LZWEncodingProcess.cpp  LZWEncodingProcess.hpp  LzwEncoder.cpp  LzwEncoder.hpp  (+2 more)
(+8 files in other folders)
